# polymarket-tracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  config.example.yaml  docker-compose.yml  pyproject.toml
.claude/: launch.json
src/polymarket/: analyzer.py  basket.py  client.py  config.py  copier.py  db.py  main.py  models.py  monitor.py  scanner.py  scorer.py  storage.py  stream.py
web/client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/client/src/: App.tsx  index.css  main.tsx
web/client/src/components/: BasketManager.tsx  PnLChart.tsx  PositionsTable.tsx  ScoreBreakdown.tsx  SettingsForm.tsx  SignalFeed.tsx  StatusBar.tsx  TierBadge.tsx  WalletDetail.tsx  WalletTable.tsx
web/client/src/hooks/: useSignals.ts  useWatcherStatus.ts
web/client/src/lib/: api.ts  types.ts  utils.ts
web/server/: app.py  settings.py  watcher.py
web/server/routes/: alerts.py  baskets.py  positions.py  settings.py  wallets.py  watcher.py
